<resources>
    <string name="app_name">WatPool</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_trips">Trips</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_safety">Safety</string>
    <string name="title_safety_tools">Safety Tools</string>
    <string name="btn_call_911">Call 911</string>
    <string name="btn_share_trip">Share this trip</string>
    <string name="btn_view_profile">View Profile</string>
    <string name="title_welcome">Welcome</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="welcome_to_watpool">Welcome to WATPool</string>
    <string name="logo_of_the_app">Logo of the App</string>
    <string name="watpool">WATPool</string>
    <string name="join_today">Join today!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="maps">Maps</string>
    <string name="to_destination">To: %1$s</string>
    <string name="from_destination">From: %1$s</string>
    <string name="center_location">Recenter Location</string>
    <string name="default_radius">0.5 km</string>
    <string name="find_route">Find Route</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="start_trip">Start Trip</string>
    <string name="distance_remaining">%.1f km</string>
    <string name="duration_remaining">%1$d hrs %2$d mins</string>
    <string name="duration_remaining_minutes">%d mins</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recalculate_route">Recalculate Route</string>
    <string name="you_are_going_off_route">You are going off-route!</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="lets_login">Let\'s Login!</string>
    <string name="namee">Name:</string>
    <string name="n_a">N/A</string>
    <string name="emaill">Email:</string>
    <string name="rider_rating">Rider Rating:</string>
    <string name="driver_rating">Driver Rating:</string>
    <string name="rate_your_ride">Rate your ride</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="end_trip">End Trip</string>
    <string name="back">Back</string>
    <string name="car_color">Car Color</string>
    <string name="car_model">Car Model</string>
    <string name="license_number">License Number</string>
    <string name="become_a_driver">Become a Driver</string>
</resources>