<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageCar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watpool"
        android:textSize="32sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_login"
        android:textSize="20sp"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:hint="@string/password"
        android:padding="12dp"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:elevation="4dp"/>
</LinearLayout>
