<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        android:text="@string/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/licenseNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="License Number"
        android:hint="@string/license_number"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/carModel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/carModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Car Model"
        android:hint="@string/car_model"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/carColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Car Color"
        android:hint="@string/car_color"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/carModel"
        app:layout_constraintBottom_toTopOf="@id/submitButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/carColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
