<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_welcome">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.watpool.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.watpool.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.watpool.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/map"
        android:name="com.example.watpool.ui.maps.MapsFragment"
        android:label="Maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_welcome"
        android:name="com.example.watpool.ui.welcome.WelcomeFragment"
        android:label="@string/title_welcome"
        tools:layout="@layout/fragment_welcome" />

    <fragment
        android:id="@+id/fragment_create_trip"
        android:name="com.example.watpool.ui.create_trip.create_trip"
        android:label="@string/title_welcome"
        tools:layout="@layout/fragment_create_trip" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.watpool.ui.welcome.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/tripDetailFragment"
        android:name="com.example.watpool.ui.trip_list.TripDetailFragment"
        android:label="fragment_trip_detail"
        tools:layout="@layout/fragment_trip_detail" >
        <argument
            android:name="tripId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/tripListFragment"
        android:name="com.example.watpool.ui.trip_list.TripListFragment"
        android:label="fragment_trip_list"
        tools:layout="@layout/fragment_trip_list" >
        <action
            android:id="@+id/action_tripListFragment_to_tripDetailFragment"
            app:destination="@id/tripDetailFragment" />
    </fragment>-
</navigation>