<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_your_ride"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rateText"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitRatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/skipRatingButton"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"/>

    <Button
        android:id="@+id/skipRatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        app:layout_constraintLeft_toRightOf="@id/submitRatingButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"/>
</androidx.constraintlayout.widget.ConstraintLayout>